# LLM-patient-data-analyze

./: README.md
patient-data-analyze-main/: README.md  pyproject.toml
patient-data-analyze-main/colab-notebooks/: llm_finetuning.ipynb
patient-data-analyze-main/data/: V3 estrazione dati antiemicranici al 9-5-24 con PDD.xlsx  Z2 estrazione dati antiemicranici 10-5-24 - 19-9-24 - con PDD - per invio.adjusted.xls  Z2 estrazione dati antiemicranici 10-5-24 - 19-9-24 - con PDD - per invio.xls
patient-data-analyze-main/output/predict_data/: output_46925018.csv  output_46925044.csv  output_47424015.csv  output_47791013.csv  output_global.csv
patient-data-analyze-main/output/training_data/: output_46925018.csv  output_46925044.csv  output_47424015.csv  output_47791013.csv
patient-data-analyze-main/patient_data_analyse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
patient-data-analyze-main/src/: compare_results.py  constants.py  finetune_llm.py  generate_datasheets.py  generate_datasheets_v2.py  predict_with_llm.py
patient-data-analyze-main/src/compute_patient_data/: compute_DDD_sum.py  compute_adherence_numerator.py  compute_average_days.py  compute_delays.py  compute_follow_up_persistence.py  compute_minsan_changes.py  compute_output_data.py  compute_output_data_v2.py  compute_persistence.py  first_prod.py  sum_importomov.py
patient-data-analyze-main/src/predict_patient_data/: generate_prediction_prompt.py  generate_training_prompt.py  load_accelerator.py  load_model_config.py  load_peft_config.py  load_tokenizer.py  print_trainable_parameters.py  train_model.py  (+3 more)
(+41 files in other folders)
